[gd_scene load_steps=3 format=3 uid="uid://w7g81ip8idt8"]

[ext_resource type="Script" path="res://scenes/ui/level/level_ui.gd" id="1_77yw5"]
[ext_resource type="Script" path="res://components/shortcut.gd" id="2_kml1o"]

[node name="LevelUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_77yw5")

[node name="StatusLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -79.0
offset_right = 113.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Godot Rush"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -15.5
offset_right = 48.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Start Game"

[node name="ShortcutComponent" type="Node" parent="StartButton"]
script = ExtResource("2_kml1o")
action = &"Reflect"

[node name="StatsLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = 48.0
offset_right = 77.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
text = "Reflections used: 00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelFinishedMenu" type="HBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ReplayButton" type="Button" parent="LevelFinishedMenu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Replay"

[node name="Control" type="Control" parent="LevelFinishedMenu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="NextButton" type="Button" parent="LevelFinishedMenu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Next Level"
